exports[`actions > group create group should work 1`] = `
Object {
  "payload": Object {
    "name": "Mock Group",
  },
  "type": "add group",
}
`;

exports[`actions > group create group should work 2`] = `
Object {
  "payload": Object {
    "args": Array [
      "/organizations/undefined/group/new-entity-id",
    ],
    "method": "push",
  },
  "type": "@@router/CALL_HISTORY_METHOD",
}
`;

exports[`actions > group delete group should work 1`] = `
Array [
  Object {
    "payload": "1",
    "type": "delete group",
  },
  Object {
    "payload": Object {
      "args": Array [
        "/organizations/1",
      ],
      "method": "push",
    },
    "type": "@@router/CALL_HISTORY_METHOD",
  },
]
`;
